{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 226,
  "lineage": "ca006664-b6b4-9a96-4ef8-5c0624d0d36d",
  "resources": [
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tomcat_instance",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-017a999ab96939027",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017a999ab96939027",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd54490cd69bb847",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "public_ip": "18.215.33.242",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09363da42c8f4c9c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b5fc16a510db800",
            "tags": {
              "Environment": "prod",
              "Name": "instance1-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "instance1-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ad0d8a71942961"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.Tomcat_security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-0d331804c22a32e00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d331804c22a32e00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027eb892ce071ba37",
            "private_dns": "ip-10-0-2-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.189",
            "public_ip": "44.211.156.157",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08de2fc7b26d82a80",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0918f882f061e02a6",
            "tags": {
              "Environment": "prod",
              "Name": "instance2-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "instance2-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ad0d8a71942961"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.Tomcat_security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance3",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-0f0dbe580eefa7ec4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0dbe580eefa7ec4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0a67f2c0591ea8d",
            "private_dns": "ip-10-0-3-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.194",
            "public_ip": "23.22.208.242",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-015a526a9cc945111",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c070ad18c37c85e7",
            "tags": {
              "Environment": "prod",
              "Name": "instance3-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "instance3-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ad0d8a71942961"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.Tomcat_security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance4",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-0443a240b4880d56f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0443a240b4880d56f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-025f282d0339f05bb",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.77",
            "public_ip": "44.195.49.36",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d16877b79712c88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b5fc16a510db800",
            "tags": {
              "Environment": "prod",
              "Name": "instance4-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "instance4-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ad0d8a71942961"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.Tomcat_security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "instance5",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-0f1e3529be929334d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1e3529be929334d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0877fe6cd5bd1d6e6",
            "private_dns": "ip-10-0-2-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.183",
            "public_ip": "13.220.107.202",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a2a5f75b0b0ae476",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0918f882f061e02a6",
            "tags": {
              "Environment": "prod",
              "Name": "instance5-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "instance5-prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-078ad0d8a71942961"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.Tomcat_security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:internet-gateway/igw-0d216c77b58901758",
            "id": "igw-0d216c77b58901758",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "tags": {
              "Name": "TerraformGateway-prod"
            },
            "tags_all": {
              "Name": "TerraformGateway-prod"
            },
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:route-table/rtb-0f2e5184287a9e17d",
            "id": "rtb-0f2e5184287a9e17d",
            "owner_id": "180344874861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d216c77b58901758",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRouteTable-prod"
            },
            "tags_all": {
              "Name": "TerraformRouteTable-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6b733d6f20969c2",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2e5184287a9e17d",
            "subnet_id": "subnet-05b5fc16a510db800"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_route_table.route_table",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081382f561fb2ab23",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2e5184287a9e17d",
            "subnet_id": "subnet-0918f882f061e02a6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_route_table.route_table",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0430ac3436b0a9e",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2e5184287a9e17d",
            "subnet_id": "subnet-0c070ad18c37c85e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_route_table.route_table",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Tomcat_security_group",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:security-group/sg-078ad0d8a71942961",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078ad0d8a71942961",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Tomcat_security_group",
            "name_prefix": "",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TomcatSecurityGroup-prod"
            },
            "tags_all": {
              "Name": "TomcatSecurityGroup-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:subnet/subnet-05b5fc16a510db800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b5fc16a510db800",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180344874861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1-prod"
            },
            "tags_all": {
              "Name": "public-subnet-1-prod"
            },
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:subnet/subnet-0918f882f061e02a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918f882f061e02a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180344874861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2-prod"
            },
            "tags_all": {
              "Name": "public-subnet-2-prod"
            },
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:subnet/subnet-0c070ad18c37c85e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c070ad18c37c85e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180344874861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-3-prod"
            },
            "tags_all": {
              "Name": "public-subnet-3-prod"
            },
            "vpc_id": "vpc-0d536e348ecf945ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:vpc/vpc-0d536e348ecf945ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069ac0e11829cb1d4",
            "default_route_table_id": "rtb-00ca6fd1348fbce97",
            "default_security_group_id": "sg-0fd96b2176d445ecf",
            "dhcp_options_id": "dopt-055139cc1912ba6ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d536e348ecf945ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ca6fd1348fbce97",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "tags": {
              "Name": "TerraformVPC-prod"
            },
            "tags_all": {
              "Name": "TerraformVPC-prod"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}